# explain-codebase

./: LICENSE  README.md  pyproject.toml
explain_codebase/: __init__.py
explain_codebase/analysis/: architecture_module_detector.py  architecture_smell_detector.py  core_module_detector.py  dangerous_file_detector.py  entrypoint_finder.py  file_explainer.py  hotspot_detector.py  large_file_detector.py  onboarding_path_finder.py  side_effect_detector.py
explain_codebase/classify/: __init__.py  file_classifier.py
explain_codebase/cli/: main.py  target_resolution.py
explain_codebase/detectors/: language_detector.py  project_type_detector.py
explain_codebase/explain/: __init__.py  explanation_engine.py
explain_codebase/graph/: __init__.py  dependency_graph.py
explain_codebase/models/: analysis_result.py  file_info.py  project_info.py
explain_codebase/parsers/: __init__.py  js_parser.py  python_parser.py  ts_parser.py
explain_codebase/renderers/: cli_renderer.py  graph_renderer.py  html_report_renderer.py  json_renderer.py
explain_codebase/scanner/: __init__.py  git_filter.py  project_scanner.py
explain_codebase/utils/: file_utils.py
fixtures/express_example/: package.json  server.js
fixtures/express_example/controllers/: userController.js
fixtures/express_example/repositories/: userRepository.js
fixtures/express_example/routes/: userRoutes.js
fixtures/express_example/services/: userService.js
fixtures/fastapi_example/: main.py
fixtures/fastapi_example/db/: client.py
fixtures/fastapi_example/repositories/: user_repository.py
fixtures/fastapi_example/services/: user_service.py
fixtures/python_cli_example/: cli.py
tests/: test_analysis.py  test_project_scanner.py
