[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explain-codebase"
version = "0.1.0"
description = "CLI tool for quickly mapping the architecture of an unfamiliar repository."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "danyasync" }
]
dependencies = [
  "networkx>=3.3",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/danyasync/explain-codebase"
Repository = "https://github.com/danyasync/explain-codebase"
Issues = "https://github.com/danyasync/explain-codebase/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
explain-codebase = "explain_codebase.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["explain_codebase"]

[tool.pytest.ini_options]
testpaths = ["tests"]